# heor-modeling-platform

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  deploy.sh  docker-compose.yml  nginx.conf  requirements.txt  start.sh
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260325_0001_initial_schema.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: analytics.py  calibration.py  demo.py  evidence.py  health.py  jobs.py  probability_functions.py  runs.py
backend/app/core/: config.py
backend/app/db/: init_db.py  session.py  types.py
backend/app/models/: __init__.py  analysis.py  evidence.py  platform.py
backend/app/schemas/: analytics.py  calibration.py  common.py  demo.py  evidence.py  jobs.py  probability_functions.py  runs.py
backend/app/services/: analytics_service.py  calibration_service.py  demo_service.py  evidence_service.py  job_service.py  probability_service.py  run_service.py  solver_service.py
backend/app/workers/: job_worker.py
backend/docs/: API_CONTRACT.md
data/: cost-data.json  disease-burden.json  disease-models.json  hta-reports.json  icd-codes.json  model-templates.json  payer-data.json  qaly-data.json  treatment-algorithms.json  utility-values.json
docs/: .push-test  README.md  api-client.js  api-docs.html  app.js  calibration.html  charts.js  contact.html  disease-data.html  evidence.html  example-run.html  index.html  opc-nav.js  review.html  (+11 more)
(+58 files in other folders)
